// Superstore — STAR SCHEMA
// Denormalized OLAP model based on the A1 logical model.
// One central fact table (fact_sales) connected to five dimensions.
// Hierarchies from A1 are collapsed into single dim tables:
//   - dim_product flattens Category / SubCategory / Product
//   - dim_location flattens Country / Region / State / City
//   - dim_customer merges in Segment
// dim_date is added as a standard time dimension for analytics.

Project superstore_star {
  database_type: 'PostgreSQL'
  Note: 'Superstore Star Schema — one fact table (fact_sales) + five dimensions'
}

Table fact_sales {
  sale_id        int          [pk, increment, note: 'surrogate PK for the fact row']
  order_id       varchar(20)  [not null, note: 'degenerate dimension — kept inline so we can still group by order']
  order_date_id  int          [not null, ref: > dim_date.date_id]
  ship_date_id   int          [not null, ref: > dim_date.date_id]
  customer_id    int          [not null, ref: > dim_customer.customer_id]
  product_id     int          [not null, ref: > dim_product.product_id]
  location_id    int          [not null, ref: > dim_location.location_id]
  ship_mode_id   int          [not null, ref: > dim_ship_mode.ship_mode_id]
  quantity       int          [not null]
  sales          decimal(10,2) [not null]
  profit         decimal(10,2) [not null]
  unit_price     decimal(10,2)
  days_to_ship   int

  Note: 'Grain: one row per product line on an order'
}

Table dim_customer {
  customer_id    int          [pk, increment]
  customer_code  varchar(10)  [unique, note: 'natural code from source, e.g. CG-12520']
  customer_name  varchar(100) [not null]
  segment_name   varchar(50)  [not null, note: 'denormalized from the segment lookup in A1']
}

Table dim_product {
  product_id        int          [pk, increment]
  product_code      varchar(20)  [unique, note: 'natural code from source, e.g. FUR-BO-10001798']
  product_name      varchar(255) [not null]
  sub_category_name varchar(50)  [not null, note: 'denormalized — was its own table in A1']
  category_name     varchar(50)  [not null, note: 'denormalized — was its own table in A1']
}

Table dim_location {
  location_id  int          [pk, increment]
  city_name    varchar(100) [not null]
  state_name   varchar(50)  [not null]
  region_name  varchar(50)  [not null, note: 'denormalized']
  country_name varchar(100) [not null, note: 'denormalized']

  Note: 'Denormalized geography hierarchy collapsed into one dim'
}

Table dim_ship_mode {
  ship_mode_id   int         [pk, increment]
  ship_mode_name varchar(50) [unique, not null]
}

Table dim_date {
  date_id     int         [pk, note: 'YYYYMMDD integer, e.g. 20191108']
  full_date   date        [unique, not null]
  year        int         [not null]
  quarter     int         [not null]
  month       int         [not null]
  month_name  varchar(10) [not null]
  day         int         [not null]
  day_of_week int         [not null]
  day_name    varchar(10) [not null]
  is_weekend  boolean     [not null]
}

TableGroup "FACT table" {
  fact_sales
}

TableGroup "DIMENSION tables" {
  dim_customer
  dim_product
  dim_location
  dim_ship_mode
  dim_date
}
